--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     async function main() {
       alert("LINE Developers x Skooldio")
       await liff.init({ liffId: "2007030957-Rj48MPo0" })
-      // getEnvironment()
-      // getUserProfile()
+      getEnvironment()
+      getUserProfile()
       // getContext()
       // getFriendship()
       // createUniversalLink()
